test/FAIL/assertcmd/memory_match/09_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded"
#-------

assert byte 15 0x1000
